// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should be consistent with snapshots when default 1`] = `
<div
  className="Header ant-layout-header"
>
  <img
    alt="logo"
    className="Logo LogoSpinPaused"
    src="logo.svg"
  />
  <h1
    className="Title"
  >
    Welcome to React
  </h1>
</div>
`;

exports[`<App /> should be consistent with snapshots when logo is spinning 1`] = `
<div
  className="Header ant-layout-header"
>
  <img
    alt="logo"
    className="Logo "
    src="logo.svg"
  />
  <h1
    className="Title"
  >
    Welcome to React
  </h1>
</div>
`;
